@@ -40,6 +40,7 @@ Plugins
 -------
 
 * New primitive in database SDK: "lookupIdentifierRange" to speed up range searches
+* New function in the SDK: "OrthancPluginCheckVersionAdvanced()"
 
 Maintenance
 -----------
